--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 
 body{
-    background-color: rgb(245, 237, 228);
+    background: url('assets/istockphoto-1083383864-170667a.jpg') 
+    no-repeat;
+    background-size: cover;
 }
 
 *{
